--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,5 @@ jobs:
         ./gradlew run &
         ./postman_tests/run-api-tests.sh
         ./gradlew --stop
+    - name: Release
+      run: ./gradlew release -Prelease.useAutomaticVersion=true
