--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,17 @@ jobs:
         ./gradlew run &
         ./postman_tests/run-api-tests.sh
         ./gradlew --stop
+        
+  release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew  
     - name: Release
       run: ./gradlew release -Prelease.useAutomaticVersion=true
