--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 18
       uses: actions/setup-java@v1
       with:
-        java-version: 11
+        distribution: temurin
+        java-version: 18
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
